# Two-Birds-One-Stone

./: README.md  pyproject.toml
Game/: __init__.py  background.py  bird.py  level_loader.py  slingshot.py  utils.py
Game/Assets/levels/: level_1.json
